# knowledge-vector-search

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_api.py  test_readme_api.py  test_readme_full.py
knowledge_search/: __init__.py  __main__.py  cli.py  database.py  document_processor.py  embeddings.py  indexer.py  search_engine.py  types.py
mixed_demo/: ai_tools.md  chicken_tikka_masala.md  chocolate_cake.md  green_smoothie.md  machine_learning.md  overnight_oats.md  programming.md  spaghetti_aglio_olio.md
tests/: conftest.py  test_basic.py
