[project]
name = "knowledge-vector-search"
version = "0.1.0"
description = "Lightweight, ONNX-optimized vector search for knowledge bases"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Glasmeyer" },
]
keywords = ["vector-search", "embeddings", "semantic-search", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "pyyaml>=6.0.2", 
    "sqlite-vec>=0.1.6",
    "numpy>=1.24.0",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[project.scripts]
knowledge-search = "knowledge_search.cli:main"

[project.urls]
Homepage = "https://github.com/jglasmeyer/knowledge-vector-search"
Repository = "https://github.com/jglasmeyer/knowledge-vector-search.git"
Issues = "https://github.com/jglasmeyer/knowledge-vector-search/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_search"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N812"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
